test/valid/fc36994_TestAbstract/Abstract.plume
/**
 * For testing abstract
 * @author 36994, César Santos
 */
abstract class Abstract extends Object is
  abstract method sumFields : () -> Integer